<resources>
    <string name="app_name">Hello Yatri</string>
    <string name="connection_exception">No Internet connection. Please check your Internet connection and try again.</string>
    <string name="socket_time_out_exception">Connection timeout</string>
    <string name="other_exception">Something is wrong here</string>
    <string name="dummy_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since</string>
    <string name="title_more">More</string>
    <string name="title_home">Home</string>
    <string name="label_99_plus">99+</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_take_photo">Take Photo</string>
    <string name="label_select_photo">Select Photo</string>
    <string name="label_take_video">Take Video</string>
    <string name="label_select_video">Select Video</string>
    <string name="label_country_code">Country Code</string>
    <string name="years_ago">Years ago</string>
    <string name="year_ago">Year ago</string>
    <string name="months_ago">Months ago</string>
    <string name="month_ago">Month ago</string>
    <string name="weeks_ago">Weeks ago</string>
    <string name="week_ago">Week ago</string>
    <string name="days_ago">Days ago</string>
    <string name="day_ago">Day ago</string>
    <string name="hours_ago">Hours ago</string>
    <string name="hour_ago">Hour ago</string>
    <string name="minutes_ago">Minutes ago</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="minute_ago">Minute ago</string>
    <string name="seconds_ago">Seconds ago</string>
    <string name="second_ago">Second ago</string>
    <string name="just_now">Just now</string>
    <string name="label_select_date">SELECT A DATE</string>
    <string name="label_we_provide_nprofessional_taxi_nservices_for_you">We provide \nprofessional taxi \nservices for you</string>
    <string name="label_the_best_taxi_booking_app_of_the_ncentury_to_make_your_day_great">The best taxi booking app of the \ncentury to make your day great!</string>
    <string name="btn_get_started">Get Started</string>
    <string name="dummy_hint_ex_rahul">Ex, Rahul</string>
    <string name="hint_password">\u25CF \u25CF \u25CF \u25CF \u25CF \u25CF \u25CF \u25CF</string>
    <string name="label_don_t_have_an_account_sign_up">Don\'t have an account? \nSign Up</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="btn_next">Next</string>
    <string name="title_user_id">User ID</string>
    <string name="hint_ex_rahul">Ex, Rahul</string>
    <string name="title_password">Password</string>
    <string name="label_hello">Hello</string>
    <string name="label_welcome_back">Welcome back</string>
    <string name="label_you_ve_been_missed">you\'ve been missed</string>
    <string name="validation_password_should_be_contained_1_uppercase_1_lowercase_1_digit_and_1_special_character">Password should be contained 1 uppercase, 1 lowercase, 1 digit and 1 special character</string>
    <string name="validation_please_enter_minimum_8_characters">Please enter minimum 8 characters</string>
    <string name="validation_please_enter_password">Please enter password</string>
    <string name="validation_please_enter_valid_user_id">Please enter valid user id</string>
    <string name="validation_please_enter_user_id">Please enter user id</string>
    <string name="dummy_username">Hello!\nRahul Patel</string>
    <string name="dummy_username_value">Rahul Patel</string>
    <string name="label_your_current_location">Your current location</string>
    <string name="label_dummy_101_national_dr_nsan_bruno_ca_94580">101 National Dr.\nSan Bruno, CA 94580</string>
    <string name="label_change_location">Change Location</string>
    <string name="label_dummy_12_ride_nearby">0 ride nearby</string>
    <string name="dummy_20">0%</string>
    <string name="label_acceptance_nratio">Acceptance\nratio</string>
    <string name="label_ride_request">Ride Request</string>
    <string name="label_you_are_offline">You are offline</string>
    <string name="label_go_online">Go Online</string>
    <string name="label_go_offline">Go Offline</string>
    <string name="label_dummy_20_trips_are_in_waiting">%s trips are in waiting</string>
    <string name="label_your_scheduled_pickups">Your Scheduled Pickups</string>
    <string name="label_turn_on_go_online_to_find_ride_request">Turn on go online to find ride request</string>
    <string name="label_view_all">View All</string>
    <string name="label_online_payment">Cash Payment</string>
    <string name="label_navigate_to">Navigate to</string>
    <string name="label_cancel_ride">Cancel Ride</string>
    <string name="label_ends_on_monday">Ends on Monday</string>
    <string name="label_complete_50_trips_and_get_100_extra">Complete 50 trips and get ₹100 extra</string>
    <string name="dummy_45">0%</string>
    <string name="label_23_trips_done_out_of_50">0 trips done out of 50</string>
    <string name="label_dummy_5_mins_away">5 mins Away</string>
    <string name="label_accept">Accept</string>
    <string name="label_decline">Decline</string>
    <string name="title_start_ride_from">Start ride from</string>
    <string name="label_where_do_you_want_to_start_your_ride">Where do you want to start your ride?</string>
    <string name="hint_ride_start_from">Ride start from</string>
    <string name="label_pick_location_near_by">Pick location near by</string>
    <string name="label_select_pick_location_to_get_more_ride">Select pick location to get more ride</string>
    <string name="_n_nacceptance_nratio">%s\nAcceptance\nratio</string>
    <string name="label_your_saved_location">Your Saved Location</string>
    <string name="label_manage">Manage</string>
    <string name="label_add_new">Add New</string>
    <string name="label_save_1">Save 1</string>
    <string name="label_save_2">Save 2</string>
    <string name="label_ride_details">Ride Details</string>
    <string name="label_arrived_at_point">Arrived at Point</string>
    <string name="label_have_to_reach_in">Have to reach in</string>
    <string name="label_meet_rahul_patel_at_their_pick_up_spot">Meet %s at their pick-up spot</string>
    <string name="label__5_min">5 min</string>
    <string name="dummy_note_note_message_show_here">Note: note message show here.</string>
    <string name="label_have_you_arrived_to_pooja_s_pickup_point">Have you arrived to pooja’s pickup point?</string>
    <string name="btn_no_still_not">No, Still not</string>
    <string name="btn_yes_i_reached">Yes, I reached</string>
    <string name="btn_submit">Submit</string>
    <string name="hint_cancel_ride">e.g. ride is book by mistake</string>
    <string name="message_please_select_at_least_one_reason">Please select at least one reason</string>
    <string name="message_please_enter_reason">Please enter reason</string>
    <string name="label_start_the_ride">Start the Ride</string>
    <string name="label_waiting_time">Waiting time</string>
    <string name="validation_please_enter_otp">Please enter OTP</string>
    <string name="validation_please_enter_valid_otp">Please enter valid OTP</string>
    <string name="label_okay_let_s_ride">Okay, let\'s ride</string>
    <string name="label_your_trip_is_verified">Your trip is verified</string>
    <string name="label_">Your code is match with pooja</string>
    <string name="label_your_code_is_match_with_pooja_start_your_ride_now">Your code is match with pooja Start your ride now!</string>
    <string name="label_verification_failed">Verification Failed</string>
    <string name="label_your_code_is_does_not_match_with_pooja_do_you_want_to_regenerate_the_code">Your code is does not match with pooja, do you want to regenerate the code ?</string>
    <string name="label_regenerate_code">Regenerate Code</string>
    <string name="label_enter_pooja_s_regenerate_code">Enter Pooja’s Regenerate Code</string>
    <string name="btn_update">Update</string>
    <string name="title_profile">Profile</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_ex_rahul_patel">Ex, rahul_patel</string>
    <string name="title_mobile_number">Mobile Number</string>
    <string name="hiint_987654321">987654321</string>
    <string name="title_gender">Gender</string>
    <string name="hint_select_gender">Select gender</string>
    <string name="hint_select_city">Select city</string>
    <string name="title_city_you_drive_in">City You Drive In</string>
    <string name="validation_please_select_at_least_one_option">Please select at least one option</string>
    <string name="validation_please_enter_full_name">Please enter full name</string>
    <string name="validation_please_enter_valid_full_name">Please enter valid full name</string>
    <string name="validation_please_enter_mobile_number">Please enter mobile number</string>
    <string name="validation_please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="validation_please_select_gender">Please select gender</string>
    <string name="validation_please_select_city">Please select city</string>
    <string name="btn_add_new">Add New</string>
    <string name="title_saved_places">Saved Places</string>
    <string name="label_set_location_on_the_map">Set location on the map</string>
    <string name="label_add">Add</string>
    <string name="title_name_this_place">Name this Place</string>
    <string name="hint_ex_near_home">Ex, Near home</string>
    <string name="title_address">Address</string>
    <string name="hint_ex_101_national_san_bruno_ca_94580">Ex, 101 National San Bruno, CA 94580</string>
    <string name="title_update_saved_place">Update saved place</string>
    <string name="title_add_new_place">Add new place</string>
    <string name="validation_please_enter_name_this_place">Please enter name this place</string>
    <string name="validation_please_enter_address">Please enter address</string>
    <string name="label_preferred_navigation">Preferred Navigation</string>
    <string name="label_google_maps">Google Maps</string>
    <string name="title_preferences">Preferences</string>
    <string name="label_driver_details">Driver Details</string>
    <string name="label_vehicle_details">Vehicle Details</string>
    <string name="label_want_to_change">Want to change?</string>
    <string name="label_personal_details">Personal Details</string>
    <string name="dummy_cinemax_rectory_cottage_court_road">Cinemax, Rectory Cottage, Court Road</string>
    <string name="dummy_101_national_dr_san_bruno_ca_94580">101 National Dr. San Bruno, CA 94580</string>
    <string name="dummy_fare_price_n_780">Fare Price\n₹780</string>
    <string name="labelcancel_by_rider">Cancel by rider</string>
    <string name="dummy_4_0">0.0</string>
    <string name="label_reason">Reason:</string>
    <string name="dummy_excellent_good_driver_and_car_too_overall_i_reach_my_destination_on_time">Excellent. Good driver and car too, overall I reach my destination on time.</string>
    <string name="dummy_distance_n25_5_km">Distance\n25.5 Km</string>
    <string name="dummy_duration_n45_min">Duration\n45 min</string>
    <string name="dummy_pooja_send_to_note">Pooja send to note</string>
    <string name="dummy_today_7_40_am">Today | 7:40 AM</string>
    <string name="dummy_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_morbi_egestas_tellus_et_justo_auctor_egestas_aliquam_sed_velit_est_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi egestas tellus et justo auctor egestas. Aliquam sed velit est. Lorem.</string>
    <string name="dummy_15_february_2024_9_41_pm">  </string>
</resources>