<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_12sdp"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMessage"
        style="@style/TextViewLufgaRegularBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dummy_pooja_send_to_note"
        android:textColor="@color/colorAccent"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/textViewTime"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTime"
        style="@style/TextViewLufgaRegularBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dummy_today_7_40_am"
        android:textColor="@color/colorDarkGrey"
        android:textSize="@dimen/_8ssp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/textViewMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewMessage"
        app:layout_constraintTop_toTopOf="@id/textViewMessage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDescription"
        style="@style/TextViewLufgaRegularBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:maxLines="3"
        android:text="@string/dummy_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_morbi_egestas_tellus_et_justo_auctor_egestas_aliquam_sed_velit_est_lorem"
        android:textSize="@dimen/_8ssp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>