<?xml version="1.0" encoding="utf-8"?>
<com.helloyatri.utils.roundedconstraint.RoundedConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_4sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    app:cornerAll="@dimen/_10sdp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCancelByRider"
        style="@style/TextViewLufgaRegularGrey13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_round_rect_5"
        android:backgroundTint="@color/colorLightRed"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_7sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/labelcancel_by_rider"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@id/textViewDateAndTime"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDateAndTime"
        style="@style/TextViewLufgaRegularGrey13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/dummy_15_february_2024_9_41_pm"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/textViewCancelByRider"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toEndOf="@id/textViewCancelByRider"
        app:layout_constraintTop_toTopOf="@id/textViewCancelByRider" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageViewUserProfile"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_made_in_india"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/textViewCancelByRider"
        app:riv_corner_radius="@dimen/_50sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewUserName"
        style="@style/TextViewLufgaMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="@dimen/_14ssp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/textViewPaymentType"
        app:layout_constraintEnd_toStartOf="@id/textViewRating"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/imageViewUserProfile"
        app:layout_constraintTop_toTopOf="@id/imageViewUserProfile"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Aesha Mehta" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewPaymentType"
        style="@style/TextViewLufgaRegularGrey13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/label_online_payment"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_10ssp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/imageViewUserProfile"
        app:layout_constraintEnd_toStartOf="@id/textViewRating"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/imageViewUserProfile"
        app:layout_constraintTop_toBottomOf="@id/textViewUserName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewRating"
        style="@style/TextViewLufgaRegularGrey13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_filled_star"
        android:drawablePadding="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:text="@string/dummy_4_0"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/imageViewUserProfile"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintTop_toTopOf="@id/imageViewUserProfile" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabelReason"
        style="@style/TextViewLufgaRegularGrey13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:gravity="center_vertical"
        android:text="@string/label_reason"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/imageViewUserProfile" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewReason"
        style="@style/TextViewLufgaRegularGrey13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:text="@string/dummy_excellent_good_driver_and_car_too_overall_i_reach_my_destination_on_time"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_8ssp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelReason"
        app:layout_goneMarginTop="@dimen/_10sdp" />

    <View
        android:id="@+id/viewHorizontalFirst"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewReason" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/viewHorizontalFirst"
        app:srcCompat="@drawable/ic_route" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewStartLocation"
        style="@style/TextViewLufgaRegularBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/dummy_cinemax_rectory_cottage_court_road"
        android:textSize="@dimen/_9ssp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/imageViewRoute"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/imageViewRoute"
        app:layout_constraintTop_toTopOf="@id/imageViewRoute" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDestinationLocation"
        style="@style/TextViewLufgaRegularBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/dummy_101_national_dr_san_bruno_ca_94580"
        android:textSize="@dimen/_9ssp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/imageViewDestinationLocation"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/imageViewDestinationLocation"
        app:layout_constraintTop_toTopOf="@id/imageViewDestinationLocation" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image_line"
        app:layout_constraintBottom_toTopOf="@id/imageViewDestinationLocation"
        app:layout_constraintEnd_toEndOf="@id/imageViewRoute"
        app:layout_constraintStart_toStartOf="@id/imageViewRoute"
        app:layout_constraintTop_toBottomOf="@id/imageViewRoute" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewDestinationLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/imageViewRoute"
        app:srcCompat="@drawable/ic_location" />

    <View
        android:id="@+id/viewDividerRideDetails"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/imageViewDestinationLocation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDistance"
        style="@style/TextViewLufgaRegularBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_2sdp"
        android:text="@string/dummy_distance_n25_5_km"
        android:textSize="@dimen/_10ssp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/viewVerticalFirstDivider"
        app:layout_constraintEnd_toStartOf="@id/viewVerticalFirstDivider"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toTopOf="@id/viewVerticalFirstDivider" />

    <View
        android:id="@+id/viewVerticalFirstDivider"
        android:layout_width="0.5dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewDuration"
        app:layout_constraintStart_toEndOf="@id/textViewDistance"
        app:layout_constraintTop_toBottomOf="@id/viewDividerRideDetails" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDuration"
        style="@style/TextViewLufgaRegularBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_2sdp"
        android:text="@string/dummy_duration_n45_min"
        android:textSize="@dimen/_10ssp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/viewVerticalFirstDivider"
        app:layout_constraintEnd_toStartOf="@id/viewVerticalSecondDivider"
        app:layout_constraintStart_toEndOf="@id/viewVerticalFirstDivider"
        app:layout_constraintTop_toTopOf="@id/viewVerticalFirstDivider" />

    <View
        android:id="@+id/viewVerticalSecondDivider"
        android:layout_width="0.5dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toStartOf="@id/textViewFairPrice"
        app:layout_constraintStart_toEndOf="@id/textViewDuration"
        app:layout_constraintTop_toBottomOf="@id/viewDividerRideDetails" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewFairPrice"
        style="@style/TextViewLufgaRegularBlack15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_2sdp"
        android:text="@string/dummy_fare_price_n_780"
        android:textSize="@dimen/_10ssp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/viewVerticalSecondDivider"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toEndOf="@id/viewVerticalSecondDivider"
        app:layout_constraintTop_toTopOf="@id/viewVerticalSecondDivider" />

</com.helloyatri.utils.roundedconstraint.RoundedConstraintLayout>